Prevent "type the name of a community..." text from word-wrapping around extent map.

--- a/assets/99_app.css
+++ b/assets/99_app.css
@@ -157,6 +157,10 @@ label.label:not(:last-child) {
 	}
 }
 
+.container.top {
+	clear: both;
+}
+
 @media (max-width: 767px) {
 	.container.top {
 		padding: 0 20px;
